# sheetlyy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sandbox.py
app/: main.py
app/classes/: models.py  results.py
app/detection/: accidental.py  bar_line.py  brace_dot.py  note.py  rest.py  staff.py  staff_dewarp.py
app/musicxml/: accidental_rules.py  xml_generator.py
app/parser/: staff.py  staff_tromr.py
app/segmentation/: inference.py
app/transformer/: circle_of_fifths.py  configs.py  decoder.py  encoder.py  parser.py  split_merge_symbols.py  staff2score.py  tromr_arch.py
app/utils/: bounding_box.py  constants.py  debug.py  image_postprocessing.py  image_preprocessing.py  models.py
tests/web/: test_app.py  test_main.py
tests/worker/: test_inference.py
web/: app.py  main.py
web/routes/: __init__.py  downloads.py  health_check.py  index.py  processing.py  routes.py  uploads.py
web/templates/: base.html  reorder_form.html  upload_form.html
web/utils/: clients.py  constants.py
worker/: main.py
worker/classes/: models.py  results.py
worker/detection/: accidental.py  bar_line.py  brace_dot.py  note.py  rest.py  staff.py  staff_dewarp.py
worker/inference/: inference.py
worker/musicxml/: accidental_rules.py  xml_generator.py
worker/parser/: staff.py  staff_tromr.py
worker/segmentation/: inference.py
worker/transformer/: configs.py  decoder.py  encoder.py  parser.py  split_merge_symbols.py  staff2score.py  tromr_arch.py
worker/utils/: bounding_box.py  debug.py  download.py  image_postprocessing.py  image_preprocessing.py
(+7 files in other folders)
