[project]
name = "sheetlyy"
version = "0.1.0"
description = "A simple web app to convert photos of sheet music to MusicXML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "tensorflow>=2.14.0",
]
